--- a/www/index.html
+++ b/www/index.html
@@ -39,8 +39,6 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
+        <script type="text/javascript" src="js/calendar.js"></script>
     </body>
 </html>
